# docstring-police

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  sandbox.ipynb  todo-languages.json  versions.json
.github/workflows/: docs.yaml  todo.yaml
src/docstring_police/: __init__.py  chat.py  extractor.py  gpt.py  info_models.py
src/docstring_police/prompts/: prompt_system.py
tests/examples/: README.md  example_11.py  test_1.py  test_10.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_7.py  test_8.py  test_9.py
v1.0.5/: 404.html  index.html  sitemap.xml
v1.0.5/CHANGELOG/: index.html
v1.0.5/Community/: index.html
v1.0.5/FAQ/: index.html
v1.0.5/advanced/authentication/: index.html
v1.0.5/advanced/channel_priority/: index.html
v1.0.5/advanced/explain_info_command/: index.html
v1.0.5/advanced/github_actions/: index.html
v1.0.5/advanced/production_deployment/: index.html
v1.0.5/advanced/pyproject_toml/: index.html
v1.0.5/advanced/updates_github_actions/: index.html
v1.0.5/basic_usage/: index.html
v1.0.5/design_proposals/pixi_global_manifest/: index.html
v1.0.5/examples/cpp-sdl/: index.html
v1.0.5/examples/opencv/: index.html
v1.0.5/examples/ros2-nav2/: index.html
v1.0.5/features/advanced_tasks/: index.html
v1.0.5/features/environment/: index.html
v1.0.5/features/global_tools/: index.html
v1.0.5/features/lockfile/: index.html
v1.0.5/features/multi_environment/: index.html
v1.0.5/features/multi_platform_configuration/: index.html
v1.0.5/features/system_requirements/: index.html
v1.0.5/ide_integration/devcontainer/: index.html
v1.0.5/ide_integration/jupyterlab/: index.html
v1.0.5/ide_integration/pycharm/: index.html
v1.0.5/ide_integration/r_studio/: index.html
v1.0.5/packaging/: index.html
v1.0.5/reference/cli/: index.html
v1.0.5/reference/pixi_configuration/: index.html
v1.0.5/reference/project_configuration/: index.html
v1.0.5/switching_from/conda/: index.html
v1.0.5/switching_from/poetry/: index.html
v1.0.5/tutorials/python/: index.html
v1.0.5/tutorials/ros2/: index.html
v1.0.5/tutorials/rust/: index.html
v1.0.5/vision/: index.html
v1.0.7/: 404.html  index.html  sitemap.xml
v1.0.7/CHANGELOG/: index.html
v1.0.7/Community/: index.html
v1.0.7/FAQ/: index.html
v1.0.7/advanced/authentication/: index.html
v1.0.7/advanced/channel_priority/: index.html
v1.0.7/advanced/explain_info_command/: index.html
v1.0.7/advanced/github_actions/: index.html
v1.0.7/advanced/production_deployment/: index.html
v1.0.7/advanced/pyproject_toml/: index.html
v1.0.7/advanced/updates_github_actions/: index.html
v1.0.7/basic_usage/: index.html
v1.0.7/design_proposals/pixi_global_manifest/: index.html
v1.0.7/examples/cpp-sdl/: index.html
v1.0.7/examples/opencv/: index.html
v1.0.7/examples/ros2-nav2/: index.html
v1.0.7/features/advanced_tasks/: index.html
v1.0.7/features/environment/: index.html
v1.0.7/features/global_tools/: index.html
v1.0.7/features/lockfile/: index.html
v1.0.7/features/multi_environment/: index.html
v1.0.7/features/multi_platform_configuration/: index.html
v1.0.7/features/system_requirements/: index.html
v1.0.7/ide_integration/devcontainer/: index.html
v1.0.7/ide_integration/jupyterlab/: index.html
v1.0.7/ide_integration/pycharm/: index.html
v1.0.7/ide_integration/r_studio/: index.html
v1.0.7/packaging/: index.html
v1.0.7/reference/cli/: index.html
v1.0.7/reference/pixi_configuration/: index.html
v1.0.7/switching_from/conda/: index.html
v1.0.7/vision/: index.html
(+5 files in other folders)
